# otserv2

./: .appveyor.yml  client_assertions.txt  global-database.sql  restart.txt
cmake/: global.rc
data/: stages.lua
data/XML/: events.xml  mounts.xml  outfits.xml  vocations.xml
data/events/scripts/: player.lua
data/items/: items.xml
data/lib/: lib.lua  vip_system.lua
data/lib/core/: imbuements.lua  storages.lua
data/monster/bosses/: apocalypse.lua  dharalion.lua  fugue.lua  katex_blood_tongue.lua  srezz_yellow_eyes.lua  utua_stone_sting.lua  yirkas_blue_scales.lua
data/monster/bounac/: drume.lua  kesar.lua  lion_archer.lua  lion_commander.lua  lion_knight.lua  usurper_archer.lua  usurper_commander.lua
data/monster/constructs/: lava_golem.lua
data/monster/dragons/: hydra.lua
data/monster/elementals/: fire_elemental.lua  massive_earth_elemental.lua
data/monster/extra_dimensional/: yielothax.lua
data/monster/giants/: behemoth.lua  cyclops_drone.lua  ogre_rowdy.lua
data/monster/humanoids/: dwarf_guard.lua  elf_arcanist.lua  minotaur_guard.lua  orc_marauder.lua
data/monster/humans/: blood_hand.lua  blood_priest.lua  dark_monk.lua  feverish_citizen.lua  monk.lua  necromancer.lua
data/monster/magicals/: bog_raider.lua  choking_fear.lua  crypt_warden.lua  guzzlemaw.lua  sight_of_surrender.lua  sphinx.lua
data/monster/mammals/: mammoth.lua
data/npc/: captain bounac.xml  yasir.xml
data/raids/: raids.xml
data/world/: global-house.xml
docs/: config.ld.in
src/: configmanager.cpp  luascript.cpp
tests/: CMakeLists.txt  build_and_run.sh
(+87 files in other folders)
